name:               haskell-on-heroku-tutorial
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable haskell-on-heroku-tutorial
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      bytestring,
                      hourglass,
                      postgresql-simple,
                      servant,
                      servant-server,
                      text,
                      transformers,
                      warp
